--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             html{
                 font-size: ${pageWidth / 100}px;
             }</style>`
+        document.write(string)
     </script>
 </head>
 <body>
